# eggtx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  pytest.yml
examples/: convert_example.py  rules.eg
src/eggtx/: __init__.py  __main__.py  rewrite.py
src/eggtx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_rewrite.py
